// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App snapshot test 1`] = `
Array [
  <div
    className="jumbotron jumbotron-fuild shadow-lg"
  >
    <div
      className="container"
    >
      <h1
        className="display-3  shadow-lg"
      >
         Zendesk Ticket Viewer 
      </h1>
    </div>
  </div>,
  <div
    className="main-container-div"
  >
    <div
      className="tickets-container-div"
    >
      <div
        className="tickets-list"
      >
        <ul
          className="list-group  my-list-group bg-dark list-group-flush "
        />
      </div>
    </div>
    <div
      className="pagination-buttons-div"
    />
  </div>,
  <footer
    className="footer"
  >
    <div
      id="footer-container-div"
    >
      Zane Keyan - Zendesk Ticket viewer
      <a
        href="https://github.com/zanekeyan/ticket-viewer"
      >
        --Github source code--
      </a>
    </div>
  </footer>,
]
`;

exports[`Error snapshot test 1`] = `
<div
  className="error-div"
>
  <h1>
    Error: 
  </h1>
  <img
    alt="car icon"
    className="bug-icon"
    src="bug.png"
  />
</div>
`;

exports[`Footer snapshot test 1`] = `
<footer
  className="footer"
>
  <div
    id="footer-container-div"
  >
    Zane Keyan - Zendesk Ticket viewer
    <a
      href="https://github.com/zanekeyan/ticket-viewer"
    >
      --Github source code--
    </a>
  </div>
</footer>
`;

exports[`Header snapshot test 1`] = `
<div
  className="jumbotron jumbotron-fuild shadow-lg"
>
  <div
    className="container"
  >
    <h1
      className="display-3  shadow-lg"
    >
       Zendesk Ticket Viewer 
    </h1>
  </div>
</div>
`;

exports[`Ticket snapshot test 1`] = `
<div
  className="ticket-div"
>
  <li
    className="list-group-item bg-dark text-white"
  >
    <div
      className="ticketImage"
    >
      <img
        alt="ticket icon"
        className="img-thumbnail"
        src="ticket.png"
      />
    </div>
    <div
      className="ticketInfo"
    >
      <p>
         subject: 
         
      </p>
      <p>
         ticket_id: 
         
      </p>
      <p>
         created_at: 
      </p>
      <button
        className="btn btn-outline-light shadow-lg"
        onClick={[Function]}
        type="button"
      >
         Ticket Details 
      </button>
    </div>
  </li>
</div>
`;

exports[`TicketInfoModal snapshot test 1`] = `null`;

exports[`TicketList snapshot test 1`] = `
<div
  className="tickets-list"
>
  <ul
    className="list-group  my-list-group bg-dark list-group-flush "
  />
</div>
`;
